# Declined-Service-Miner

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: windows-portable.yml
apps/desktop/: electron.vite.config.ts  package.json  tsconfig.json
apps/desktop/electron/: export.ts  ipc.ts  main.ts  mappings.ts  preload.ts  storage.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/renderer/src/: App.vue  csvMapping.ts  types.d.ts
docs/: CSV_FORMAT.md  INSTALL_WINDOWS.md
samples/: declined_lines.sample.csv  ro_headers.sample.csv
src/dsm/: analyze.py  cli.py  report_template.html.j2
